--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,18 @@
             padding: 10px;
             border-radius: 5px;
         }
+
+        .probs {
+            display: flex;
+            justify-content: space-around;
+            margin: 10px 0; 
+        }
+        .prob {
+            text-align: center;
+        }
+        .prob-value {
+            font-weight: bold;
+        }
         .coefficients {
             display: flex;
             justify-content: space-around;
