--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
             margin: 0;
             padding: 0;
         }
-        .match-block {
+        .block {
             background: var(--tg-theme-bg-color);
             border: 1px solid #ccc;
             margin: 20px auto;
