--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,13 @@
             padding: 20px;
             max-width: 400px;
         }
+        div {
+            background: var(--tg-theme-bg-color);
+            border: 1px solid #ccc;
+            margin: 20px auto;
+            padding: 20px;
+            max-width: 400px;
+        }
         h1 {
             text-align: center;
         }
