--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,8 @@
         }
         .block {
             background: var(--tg-theme-bg-color);
-            border: 1px solid #ccc;
+            border: 3px solid #ccc;
+            border-radius: 15px 15px 15px 15px;
             margin: 20px auto;
             padding: 20px;
             max-width: 400px;
