--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@
         }
 
         .block {
-            background-color: white;
+            background-color: var(--tg-theme-bg-color);
             padding: 20px;
             margin-bottom: 20px;
             border-radius: 5px;
