--- a/css/styles.css
+++ b/css/styles.css
@@ -20,8 +20,9 @@
         .block {
             background: var(--tg-theme-bg-color);
             padding: 20px;
-            margin-bottom: 20px;
+            margin: 20px auto;
             border-radius: 5px;
+            max-width: 400px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         }
 
