--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
             font-family: Arial, sans-serif;
             color: var(--tg-theme-text-color);
             margin: 0;
-            padding: 0;
+            padding: 20px;
         }
         div {
             background: var(--tg-theme-bg-color);
